# facial_recognition_SL

./: README.md  main.ipynb  pyproject.toml  requirements.txt
