[project]
name = "facial-recognition-with-supervised-learning"
version = "0.1.0"
description = "A comprehensive machine learning project that demonstrates building a binary classifier to identify Arnold Schwarzenegger in facial images using three different supervised learning algorithms."
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
